objects/LAT_BR_CISP_Information__c.object
<CustomObject>
    <fields>
        <fullName>LAT_BR_CISPI_CISP_Information__c</fullName>
        <label>CISP Information</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1º Drinks Segment</fullName>
                </value>
                <value>
                    <fullName>2º Drinks Segment</fullName>
                </value>
                <value>
                    <fullName>3º Drinks Segment</fullName>
                </value>
                <value>
                    <fullName>1º Food Segment</fullName>
                </value>
                <value>
                    <fullName>2º Food Segment</fullName>
                </value>
                <value>
                    <fullName>3º Food Segment</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAT_BR_CISPI_Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_BR_CISPI_Credit_Analisis__c</fullName>
        <label>Credit Analisis</label>
        <referenceTo>Analise_de_credito__c</referenceTo>
        <relationshipLabel>LAT_BR_CISP Informations</relationshipLabel>
        <relationshipName>CISP_Informations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LAT_BR_CISPI_Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAT_BR_CISPI_Greater_Accumulation__c</fullName>
        <label>Greater Accumulation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_BR_CISPI_Limit_Value__c</fullName>
        <label>Limit Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_BR_CISPI_Ordination__c</fullName>
        <label>Ordination</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>LAT_BR_CISP Information</label>
    <nameField>
        <displayFormat>CISP-{0000}</displayFormat>
        <label>CISP Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LAT_BR_CISP Informations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>